--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ionic-conference-app",
+  "name": "ionic-puzzle-app",
   "version": "0.0.0",
-  "description": "Ionic Conference App",
-  "author": "Ionic Team <hi@ionicframework.com>",
+  "description": "UpInPieces Puzzle Creator & Game",
+  "author": "EasyTech Dev Team <alanchelmickjr@gmail.com>",
   "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
@@ -27,6 +27,11 @@
     "@angular/pwa": "^0.803.23",
     "@angular/router": "^8.2.14",
     "@angular/service-worker": "^8.2.14",
+    "@capacitor/app": "1.0.2",
+    "@capacitor/core": "3.2.0",
+    "@capacitor/haptics": "1.0.2",
+    "@capacitor/keyboard": "1.0.2",
+    "@capacitor/status-bar": "1.0.2",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/in-app-browser": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
@@ -43,6 +48,7 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "core-js": "^3.6.4",
+    "ionicons": "^5.5.3",
     "rxjs": "^6.5.4",
     "sw-toolbox": "3.6.0",
     "tslib": "^1.10.0",
@@ -57,6 +63,7 @@
     "@angular/compiler": "^8.2.14",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
+    "@capacitor/cli": "3.2.0",
     "@ionic/angular-toolkit": "^2.1.2",
     "@ionic/lab": "^2.0.19",
     "@types/jasmine": "3.4.6",
