--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Ionic Conference",
-  "short_name": "Ionic Conference",
+  "short_name": "UpInPieces",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [
