--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ionic Conference",
+  "name": "UpInPieces Puzzle Creator and Game",
   "short_name": "UpInPieces",
   "start_url": "index.html",
   "display": "standalone",
