After Online Puzzles Before turning map to rewards

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "core-js": "^3.16.2",
     "ionicons": "^5.5.3",
     "rxjs": "^6.6.7",
+    "scriptjs": "^2.5.9",
     "sw-toolbox": "3.6.0",
     "tslib": "^1.14.1",
     "zone.js": "~0.9.1"
